styles.css
/**
// This file is part of mod_organizer for Moodle - http://moodle.org/
//
// It is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// It is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// If not, see <http://www.gnu.org/licenses/>.
*/
/**
 * styles.php
 *
 * @package       mod_organizer
 * @author        Andreas Hruska (andreas.hruska@tuwien.ac.at)
 * @author        Katarzyna Potocka (katarzyna.potocka@tuwien.ac.at)
 * @author        Andreas Windbichler
 * @author        Ivan Šakić
 * @copyright     2014 Academic Moodle Cooperation {@link http://www.academic-moodle-cooperation.org}
 * @license       http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
 */
 #organizer_main_cointainer table tr.past_due td {
    background-color: #F0F0F0 !important;
}

#organizer_main_cointainer table tr.affected_slot td {
    background-color: LightGreen !important;
}

#organizer_main_cointainer table tr.unavailable td {
    color: gray !important;
}

#organizer_main_cointainer table.overview {
    width: 99% !important;
}

#organizer_main_cointainer table.overview td {
    border: 1px solid #BBB !important;
}

#organizer_main_cointainer fieldset.preview {
    width: 97.3%;
}

#organizer_main_cointainer div.datapreviewtitle{
    margin-bottom:-2em;
    font-weight:bold;
    margin-left: 1.5em;
}

/* Fix here sn. */
#organizer_main_cointainer div.forced_scroll {
    border: solid 1px #ddd;
    overflow-x: scroll;
    margin-left:10px;
    margin-right:10px;
    padding-top:2em;
}

#organizer_main_cointainer div.forced_scroll table {
    min-width: 1024px;
    margin: 1em;
}

#organizer_main_cointainer div.forced_scroll td {
    white-space: nowrap;
}

#organizer_main_cointainer table.legend td {
    vertical-align: middle !important;
}

#organizer_main_cointainer tr.registered_slot td {
    background-color: LightGreen !important;
}

#organizer_main_cointainer div.singlebutton button {
    margin: 20px 5px;
}

#organizer_main_cointainer span.countdown_normal {
    background-color: LightGreen;
}

#organizer_main_cointainer span.countdown_hurry {
    background-color: Yellow;
}

#organizer_main_cointainer span.countdown_critical {
    background-color: rgb(255,204,153);
}

#organizer_main_cointainer span.countdown_passed {
    background-color: #F0F0F0;
}

#organizer_main_cointainer span.nobreak {
    white-space: nowrap;
}

#organizer_main_cointainer div.organizerinfo {
    width: 50% !important;
}

#organizer_main_cointainer table.print-preview td {
    border: 1px solid #BBB !important;
    border-collapse: collapse;
}

#organizer_main_cointainer table.coloredrows th {
    white-space:nowrap;
}

#organizer_main_cointainer table.coloredrows .r0 {
    background-color: #f0f0f0;
    white-space:nowrap
}

#organizer_main_cointainer table.coloredrows .r1 {
    background-color: #fafafa;
    white-space:nowrap
}

#page-mod-organizer-view div#organizer_popup_header div.title h2{
    width:100%;
}

#organizer_main_cointainer fieldset#id_slotdetails input[readonly='readonly'] {
    background: #ffffff;
    color: #6d6d6d;
    border: 1px solid #afafaf;
    cursor:default;
}

#organizer_main_cointainer a.action{
    white-space:nowrap;
    display: block;
}

#organizer_main_cointainer a.disabled{
    color:grey;
}

#organizer_main_cointainer .finalgrade {
    margin-left: 0.1em;
    cursor:help;
    color: red;
}

#organizer_filterfield {
    padding-left: 2em;
}

#organizer_addbutton_div{
    margin-top: 0.5em;
    margin-bottom: 0.7em;
}

#slot_overview th {
    background-color: inherit;
}

